# calaos_hw_plc

./: .gitmodules  Makefile  README.md  calaos_plc_io.kicad_pcb  calaos_plc_io.pro  calaos_plc_io.sch  frame_cbp.odg  master_state_machine.odg  pca9505.lib  slave_state_machine.odg
sw/: AUTHORS  README.md  configure.ac
sw/config/arm/: stm32-olinuxino.cfg  stm32-olinuxino.ld
sw/debug/: README  nucleo_f411_re.cfg
sw/src/: .gitignore  KNOWN_BUGS  Makefile.am  Makefile.common  Makefile.linux  Makefile.mbed  TODO  main.c  startup_stm32f10x_md.s
sw/src/configs/: linux_config.json  mbed_config.json  nucleo_f411_shield.json  stm32_nucleo.json  stm32_nucleo_test.json
sw/src/core/: config.c  config.h  debug.h  main.c  module.c  module.h  sensors.c  sensors.h  serial_io.c  utils.h
sw/src/core/bus/: i2c.c  i2c.h  onewire.c  onewire.h  rs485.c  rs485.h  spi.c  spi.h
sw/src/core/buses/: i2c.h  spi.c
sw/src/core/communication/: communication.c  communication.h
sw/src/core/display/: display.c  display.h  ili9341.c  ssd1306.c
sw/src/core/hal/: HAL.h
sw/src/core/hal/linux/: gpio.c  i2c.c  spi.c  system.c  uart.c
sw/src/core/hal/mbed/: gpio.cpp  i2c.cpp  mbed_util.cpp  spi.cpp  system.cpp  uart.cpp
sw/src/core/io/: generic_io.c  generic_io.h  gpio.c  pcf8574.c  shift_register.c
sw/src/core/network/: network.c  network.h  wiznet_iface.cpp  wiznet_iface.h
sw/src/core/protocols/: mysensors.c  mysensors.h
sw/src/core/sensors/: bh1750.c  bh1750.h  bme280.c  bme280.h  digital_io.c  digital_io.h  ds1820.c  ds1820.h  sensors.c  sensors.h  switch.c  switch.h
(+205 files in other folders)
